# square-core

./: .dockerignore  .env.template  .gitignore  .local.env  CITATION.cff  LICENSE  Makefile  README.md  README.min.md  api.http  config.yaml  docker-compose-skill.yaml  docker-compose.models.yml  docker-compose.yaml  docker-compose.yaml.ytt  docker-compose.yml  docker-compose.ytt.min.yaml  docker-compose.ytt.yaml  init_env_files.sh  install-local.sh  install.sh  package-lock.json  package.json  reset.sh  restartDocker.sh  skills.yaml  test_explainability_api.py
.github/: pull_request_template.md
datastore-api/: .dockerignore  .env  .env.example  .env.template  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  init_app.py  main.py  models.py  pytest.ini  query_api.py  requirements.dev.txt  upload.py  (+3 more)
model-manager/: .env.template  .flake8  Dockerfile  api.dev.local.http  config.ini  docker-compose.yml  docker_access.py  pyproject.toml  requirements.dev.txt  requirements.txt
model-manager/app/routers/: api.py  management.py
model-manager/model_manager/: docker_access.py  main.py
model-manager/model_manager/app/core/: config.py  event_handlers.py  mongo_config.py
model-manager/model_manager/app/db/: database.py
model-manager/model_manager/app/models/: management.py  onnx_export.py
model-manager/model_manager/app/routers/: api.py  heartbeat.py  management.py
model-manager/model_manager/tasks/: celery.py  tasks.py
model-manager/tests/: conftest.py  test_management_api.py  test_management_tasks.py  test_onnx_deploy.py
(+1368 files in other folders)
